--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="format-detection" content="telephone=no" />
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
     <!--<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, user-scalable=no">
   <title>HCS Messenger</title>
   <link rel="stylesheet" href="pull-down/jquery.scrollz.css" >
   <link rel="stylesheet" type="text/css" href="jmobile/css/jquery.mobile.flatui.css" />
@@ -175,7 +175,7 @@
     </div>
     
     <!-- MESSAGE LIST-->
-    <div id="message-list" class="message-elem">
+    <div id="message-list" class="message-elem" data-scrollz="pull">
       
     </div>
 
