click event on navbar

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="user-info">
 
       </div>
-      <ul class="nav nav-pills nav-stacked">
+      <ul class="nav nav-pills nav-stacked" style="height: 100%">
 
           <li class="active">
               <a href="#" class="left-navigation" id="Inbox">Inbox <span class="badge"></span></a>
