--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
     </div>
     
 
-
+    <div id="backdrop" class="modal-backdrop"></div>
     <!-- MESSAGE LIST-->
-    <!--<div id="message-list" class="message-elem" data-scrollz="pull">-->
+    <div id="message-list" class="message-elem" data-scrollz="pull"></div>
     <!--<div id="message-list" class="message-elem">
     </div>-->
-    
+    <!--
     <div id="wrapper" style="margin-top: 50px;">
     <div id="scroller">  
     <div id="pullDown" class="">
@@ -193,7 +193,7 @@
     </div>
 
     </div>
-    </div>
+    </div>-->
 
 
 
