change splash page

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
   <div class="message-ajax">
     <div class="alert alert-info">
-      <strong id="message-here"></strong>
+      <strong id="message-here">Message not send</strong>
     </div>
   </div>
 
