--- a/index.html
+++ b/index.html
@@ -179,23 +179,23 @@
 
     
     <!-- MESSAGE LIST-->
-    <div id="message-list" class="message-elem" data-scrollz="pull"></div>
+    <!--<div id="message-list" class="message-elem" data-scrollz="pull"></div>-->
     <!--<div id="message-list" class="message-elem">
     </div>-->
-    <!--
+    
     <div id="wrapper" style="margin-top: 50px;">
     <div id="scroller">  
     <div id="pullDown" class="">
       <span class="pullDownIcon"></span><span class="pullDownLabel">Pull down to refresh...</span>
     </div>
-    <ul id="message-list">
-    </ul>
+    <div id="message-list">
+    </div>
     <div id="pullUp" class="">
       <span class="pullUpIcon"></span><span class="pullUpLabel">Pull up to load more...</span>
     </div>
 
     </div>
-    </div>-->
+    </div>
 
 
 
@@ -376,6 +376,7 @@ margin-right: auto;">
   <script type="text/javascript" src="pull-down/jquery.scrollz.js"></script>
   <script type="text/javascript" src="js/moment.min.js"></script>
   <script type="text/javascript" src="js/jquery.shorten.min.js"></script>
+  <script type="text/javascript" src="js/iscroll.js"></script>
   
   <script>
     $(document).bind("mobileinit", function() {
