new scrolling and left panel

--- a/index.html
+++ b/index.html
@@ -116,30 +116,32 @@
 
     <div class="page-sidebar-scroll">  
       <div class="user-info">
-
+        <h5><b>Symon Buenavista</b></h5>
       </div>
-      <ul class="nav nav-pills nav-stacked" style="height: 100%">
+      <ul class="nav nav-pills nav-stacked">
 
-          <li class="active">
+          <li class="active b-white" style="border-top: 1px solid #ccc">
               <a href="#" class="left-navigation" id="Inbox">Inbox <span class="badge"></span></a>
           </li>
-          <li>
+          <li class="b-white">
               <a href="#" class="left-navigation" id="Sent">Sent Items <span class="badge"></span></a>
           </li>
-          <li>
+          <li class="b-white">
               <a href="#" class="left-navigation"  id="Draft">Draft <span class="badge"></span></a>
           </li>
-          <li>
+          <li class="b-white">
               <a href="#" class="left-navigation"  id="Deleted">Deleted <span class="badge"></span></a>
           </li>
-          <li>
+          <li class="b-white">
               <a href="#" class="left-navigation"  id="Outbox">Outbox <span class="badge"></span></a>
           </li>
-          <li>
-              <a href="#" class="left-navigation"  id="Settings">Settings <span class="badge"></span></a>
+          <li class="border-bottom">
+              <a href="#" class="left-navigation"  id="Settings">
+                <i class="fa fa-cog"></i> &nbsp&nbspSettings <span class="badge"></span></a>
           </li>
-          <li>
-              <a href="#" class="left-navigation"  id="logout">Logout</a>
+          <li class="border-bottom">
+              <a href="#" class="left-navigation"  id="logout">
+                <i class="fa fa-sign-out"></i> &nbsp&nbspLogout</a>
           </li>
       </ul>
      
@@ -183,18 +185,18 @@
     <!--<div id="message-list" class="message-elem">
     </div>-->
     
-    <div id="wrapper" style="margin-top: 50px;">
-    <div id="scroller">  
-    <div id="pullDown" class="">
-      <span class="pullDownIcon"></span><span class="pullDownLabel">Pull down to refresh...</span>
-    </div>
-    <div id="message-list">
-    </div>
-    <div id="pullUp" class="">
-      <span class="pullUpIcon"></span><span class="pullUpLabel">Pull up to load more...</span>
-    </div>
+    <div id="wrapper" style="margin-top: 50px;" class="message-elem">
+      <div id="scroller">  
+        <div id="pullDown">
+          <span class="pullDownIcon"></span><span class="pullDownLabel"></span>
+        </div>
+          <div id="message-list">
+          </div>
+        <div id="pullUp">
+          <span class="pullUpIcon"></span><span class="pullUpLabel"></span>
+        </div>
 
-    </div>
+      </div>
     </div>
 
 
