login username on left panel

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <!-- login screen -->
       <div id="login-content">
         <div class="form-group">
-          <input type="text" class="form-control" name="username" placeholder="Enter Username" value="">
+          <input type="text" class="form-control" name="username" placeholder="Username" value="">
         </div>
         <div class="form-group">
           <input type="password" class="form-control" name="password" placeholder="Password" value="">
