--- a/index.html
+++ b/index.html
@@ -392,6 +392,7 @@
   <script type="text/javascript" src="js/moment.min.js"></script>
   <script type="text/javascript" src="js/jquery.shorten.min.js"></script>
   <script type="text/javascript" src="js/iscroll.js"></script>
+  <script type="text/javascript" src="js/flowtype.js"></script>
   <!--<script type="text/javascript" src="js/drag.js"></script>
   
   <script type="text/javascript" src="http://labs.skinkers.com/content/touchSwipe/jquery.touchSwipe.min.js"></script>
