swipe delte test

--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-body">
-          <h4>No Subject</h4>
-          <h5>Send message without subject?</h5>
+          <h4>Empty Subject</h4>
+          <h5>This message has no subject.  Do you want to send it anyway?</h5>
 
           <button type="button" class="btn btn-default" id="process-send-again">Send</button>
           <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>  
@@ -381,7 +381,7 @@
   <script type="text/javascript" src="jmobile/js/jquery.mobile-1.4.0-rc.1.js"></script>
   <script type="text/javascript" src="js/xml2json.js"></script>
   <script type="text/javascript" src="js/jquery.soap.js"></script>
-  <!--<script type="text/javascript" src="js/jqueryui.js"></script>-->
+  <script type="text/javascript" src="js/jqueryui.js"></script>
   <script type="text/javascript" src="js/snap.js"></script>
   <script type="text/javascript" src="js/jquery-dateFormat.min.js"></script>
   <script type="text/javascript" src="boot/js/bootstrap.js"></script>
@@ -393,6 +393,7 @@
   <script type="text/javascript" src="js/jquery.shorten.min.js"></script>
   <script type="text/javascript" src="js/iscroll.js"></script>
   <script type="text/javascript" src="js/flowtype.js"></script>
+  <script type="text/javascript" src="js/touchSwipe.js"></script>
   <!--<script type="text/javascript" src="js/drag.js"></script>
   
   <script type="text/javascript" src="http://labs.skinkers.com/content/touchSwipe/jquery.touchSwipe.min.js"></script>
