--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <span class="pullDownIcon"></span><span class="pullDownLabel"></span>
         </div>
         <!-- main message listing -->
-        <div id="message-list" style="background-color: #f7f7f7;">
+        <div id="message-list">
         </div>
         <!-- swipe right listing -->
         <div id="message-archive" isOpen="false">
