--- a/index.html
+++ b/index.html
@@ -396,9 +396,9 @@
   <script type="text/javascript" src="js/iscroll.js"></script>
   <script type="text/javascript" src="js/flowtype.js"></script>
   <script type="text/javascript" src="js/touchSwipe.js"></script>
-  <!--<script type="text/javascript" src="js/drag.js"></script>
+  <script type="text/javascript" src="js/jquery.nicescroll.js"></script>
   
-  <script type="text/javascript" src="http://labs.skinkers.com/content/touchSwipe/jquery.touchSwipe.min.js"></script>
+  <!--<script type="text/javascript" src="http://labs.skinkers.com/content/touchSwipe/jquery.touchSwipe.min.js"></script>
   -->
   <script>
     $(document).bind("mobileinit", function() {
