--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">-->
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, minimum-scale=1, width=device-width" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, minimum-scale=1, width=device-width, height=device-height" />
   <title>HCS Messenger</title>
   <link rel="stylesheet" type="text/css" href="jmobile/css/jquery.mobile.flatui.css" />
   <link rel="stylesheet" href="boot/css/bootstrap.css" />
