--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
   <script type="text/javascript" src="jmobile/js/jquery.mobile-1.4.0-rc.1.js"></script>
   <script type="text/javascript" src="js/xml2json.js"></script>
   <script type="text/javascript" src="js/jquery.soap.js"></script>
-  <!--<script type="text/javascript" src="js/jqueryui.js"></script>-->
+  <script type="text/javascript" src="js/jqueryui.js"></script>
   <script type="text/javascript" src="js/snap.js"></script>
   <script type="text/javascript" src="js/jquery-dateFormat.min.js"></script>
   <script type="text/javascript" src="boot/js/bootstrap.js"></script>
