swipe delete fix

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <ul class="nav navbar-nav pull-right">
               <li class="pull-left">
                 <!-- DELETE MESSAGE ICON -->
-                <!--<a href="#" id="delete-message" style="display:none"><i class="fa fa-trash-o fa-2x"></i></a>-->
+                <a href="#" id="delete-message" style="display:none"><i class="fa fa-trash-o fa-2x"></i></a>
               </li>
               <li class="pull-left">
                 <!-- UNDELETE MESSAGE ICON -->
