responsive div height to the device

--- a/index.html
+++ b/index.html
@@ -412,6 +412,8 @@
   <script type="text/javascript" src="js/flowtype.js"></script>
   <script type="text/javascript" src="js/touchSwipe.js"></script>
   <script type="text/javascript" src="js/jquery.nicescroll.js"></script>
+  <script type="text/javascript" src="js/resize.js"></script>
+  
   
   <script>
     $(document).bind("mobileinit", function() {
