--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         
         <div class="row" id="content-detail">
           <!-- right side top-->
-          <div class="col-xs-8 col-sm-8 col-md-10">
+          <div class="col-xs-8 col-sm-8 col-md-10" style="word-wrap: break-word;">
             <h4 id="detail-subject"></h4> <!-- detail subject -->
             <h5 id="detail-from"></h5>  <!-- detail from -->
             <h5 id="detail-to"></h5> <!-- detail to -->
@@ -241,7 +241,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12">
             <!-- detail content-->
-            <p class="text-justify" id="detail-content" style="min-height: 50px"></p> 
+            <p class="text-justify" id="detail-content" style="min-height: 50px;word-wrap: break-word"></p> 
           </div>
         </div>
 
