on delete message in message detail move to next message

--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
 
           <div class="clearfix"></div>
           <!-- button action -->
-          <button class="btn btn-default" id="detail-reply">Reply</button>
-          <button class="btn btn-default" id="detail-reply-all">Reply All</button>
-          <button class="btn btn-default"  id="detail-forward">Forward</button>
+          <button class="btn btn-default detail-button-group" id="detail-reply" isClick="false">Reply</button>
+          <button class="btn btn-default detail-button-group" id="detail-reply-all" isClick="false">Reply All</button>
+          <button class="btn btn-default detail-button-group"  id="detail-forward" isClick="false">Forward</button>
         </div>
 
         <!-- bottom -->
@@ -425,6 +425,7 @@
   </script>
   <script type="text/javascript" src="js/user.js"></script>
   <script type="text/javascript" src="js/messages.js"></script>
+  <script type="text/javascript" src="js/helper.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
