--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
   <script type="text/javascript" src="js/touchSwipe.js"></script>
   <script type="text/javascript" src="js/jquery.nicescroll.js"></script>
   <script type="text/javascript" src="js/resize.js"></script>
-  
+  <script type="text/javascript" src="js/lz-string-1.3.3-min.js"></script>
   
   <script>
     $(document).bind("mobileinit", function() {
